# Epilogue

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: index.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/assets/presets/: cozy-reading.json  focus-mode.json  night-reading.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  epub.rs  library.rs  main.rs  preferences.rs  preset.rs
src/scripts/: background.js  library.js  main.js  overlay.js  presets.js  reader.js  ui.js
src/styles/: layers.css  library.css  main.css  presets.css  reader.css
