[package]
name = "epilogue"
version = "0.1.0"
description = "A modern, atmospheric EPUB reader"
license = "MIT"
repository = "https://github.com/Greyash-Dave/Epilogue"
authors = ["Epilogue Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
epub = "2.0" 
tauri-plugin-fs = "2"
